Another fix added to try and correct transform not working on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,6 @@
     height: 100%;
     animation: gradient 8s ease-in infinite;
     -webkit-animation: gradient 8s ease-in infinite;
-    -ms-transform: gradient 8s ease-in infinite;
-    -moz-transform: gradient 8s ease-in infinite;
-    -o-transform: gradient 8s ease-in infinite;
 }
 
 #game-section {
@@ -71,9 +68,6 @@ h1 {
   color: #fff;
   transform: translateY(-7px);
   -webkit-animation: translateY(-7px);
-  -ms-transform: translateY(-7px);
-  -moz-transform: translateY(-7px);
-  -o-transform: translateY(-7px);
 }
 
 .btn-modal {
@@ -142,29 +136,23 @@ i {
      justify-content: center;
      transform: scale(1);
      -webkit-transform: scale(1);
-     -ms-transform: scale(1);
-     -moz-transform: scale(1);
-     -o-transform: scale(1);
      transform-style: preserve-3d;
      -webkit-transform-style: preserve-3d;
-     -ms-transform-style: preserve-3d;
      transition: transform .5s;
-     -webkit-transition: -webkit-transform .5s;
+     -webkit-transition: transform .5s;
      box-shadow: 1px 1px 1px rgba(0,0,0,.3);
 }
 
 .memory-card:active {
      transform: scale(0.97);
-     -webkit-transform:scale(0.97); 
+     -webkit-transform: scale(0.97); 
      transition: transform .2s;
-     -webkit-transition: -webkit-transform .2s;
+     -webkit-transition: transform .2s;
 }
 
 .memory-card.flip {
      transform: rotateY(180deg);
-     -webkit-transform:  rotateY(180deg); 
-     -ms-transform:   rotateY(180deg);
-      
+     -webkit-transform:  rotateY(179.9deg);   
 }
 
 img {
@@ -184,7 +172,6 @@ img {
 .front-face {
      transform: rotateY(180deg);
      -webkit-transform:  rotateY(180deg); 
-     -ms-transform:   rotateY(180deg);
 }
 
 /* Footer*/
